# unlimitedcode-agentic-ai-bootcamp

./: .env.example  openai_models.py  pyproject.toml  readme.md
week_1/: weather_agent.ipynb
week_3/: assignment.md  langgraph_intro.py  messenger.ipynb  simple_conditional_graph.ipynb  typing_intro.py
week_3/assignment/: assignment.md
week_4/: event_planning_agent.ipynb  event_planning_agent.py
week_5/: simple_retriever_system.ipynb
week_5/chroma_db/: chroma.sqlite3
week_6/: university_rag_system.ipynb
