[project]
name = "ai-bootcamp-class"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "langchain==1.3.4",
    "langchain-chroma>=1.1.0",
    "langchain-openai==1.2.2",
    "langgraph>=1.2.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "openai==2.41.0",
    "pydantic>=2.13.4",
    "requests==2.34.2",
    "scikit-learn>=1.9.0",
]
